<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="MissingConstraints,NewApi" />
    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:lineHeight="22.5sp"
        android:text="@string/rating"
        tools:targetApi="p"
        android:fontFamily="@font/lexend_semibold"
        android:layout_marginTop="13dp"/>

    <ImageView
        android:id="@+id/iv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_start_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/start" />
    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/iv_start"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/_4_2"
        android:textSize="18sp"
        android:lineHeight="16sp"
        android:fontFamily="@font/lexend_semibold"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/black"
        tools:targetApi="p" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"

        android:overScrollMode="never"/>




</androidx.constraintlayout.widget.ConstraintLayout>