<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/item_filter_bg"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/lo_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/lo_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_filter"
            android:gravity="center"
            android:orientation="vertical"
           android:paddingBottom="3.5dp"
            android:paddingTop="3.5dp"
            android:layout_marginEnd="2dp">
            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
            <TextView
                android:id="@+id/tv_count_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lo_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_filter"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="3.5dp"
            android:paddingBottom="3.5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp">
            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
            <TextView
                android:id="@+id/tv_count_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lo_media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_filter"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="3.5dp"
            android:paddingBottom="3.5dp"
            android:layout_marginStart="2dp">
            <TextView
                android:id="@+id/tv_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
            <TextView
                android:id="@+id/tv_count_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_regular"
                tools:targetApi="p" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lo_category"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="3dp">
            <TextView
                android:id="@+id/tv_5start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_filter"
                android:text="@string/_2"
                android:gravity="center"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:fontFamily="@font/lexend_regular"
                android:textColor="@color/black"
                android:paddingTop="17dp"
                android:paddingBottom="5dp"
                tools:targetApi="p" />
            <com.example.ratingui.RatingBarVectorFix
                android:id="@+id/ratingBar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="MissingConstraints"
                android:numStars="5"
                android:isIndicator="true"
                android:stepSize="1"
                style="@style/RatingBar">
            </com.example.ratingui.RatingBarVectorFix>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">
            <TextView
                android:id="@+id/tv_4start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_filter"
                android:text="@string/_4"
                android:gravity="center"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:fontFamily="@font/lexend_regular"
                android:textColor="@color/black"
                android:paddingTop="17dp"
                android:paddingBottom="5dp"
                tools:targetApi="p" />
            <com.example.ratingui.RatingBarVectorFix
                android:id="@+id/ratingBar4"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="MissingConstraints"
                android:numStars="5"
                android:isIndicator="true"
                style="@style/RatingBar">
            </com.example.ratingui.RatingBarVectorFix>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">
            <TextView
                android:id="@+id/tv_3start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_filter"
                android:text="@string/_5"
                android:gravity="center"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:fontFamily="@font/lexend_regular"
                android:textColor="@color/black"
                android:paddingTop="17dp"
                android:paddingBottom="5dp"
                tools:targetApi="p" />
            <com.example.ratingui.RatingBarVectorFix
                android:id="@+id/ratingBar3"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="MissingConstraints"
                android:numStars="5"
                android:isIndicator="true"
                style="@style/RatingBar">
            </com.example.ratingui.RatingBarVectorFix>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">

            <TextView
                android:id="@+id/tv_2start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_filter"
                android:fontFamily="@font/lexend_regular"
                android:gravity="center"
                android:lineHeight="15sp"
                android:paddingTop="17dp"
                android:paddingBottom="5dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:targetApi="p" />

            <com.example.ratingui.RatingBarVectorFix
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="MissingConstraints"
                android:numStars="5"
                android:isIndicator="true"
                style="@style/RatingBar">
            </com.example.ratingui.RatingBarVectorFix>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp">
            <TextView
                android:id="@+id/tv_1start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_filter"
                android:text="@string/_0"
                android:gravity="center"
                android:textSize="12sp"
                android:lineHeight="15sp"
                android:fontFamily="@font/lexend_regular"
                android:textColor="@color/black"
                android:paddingTop="17dp"
                android:paddingBottom="5dp"
                tools:targetApi="p" />
            <com.example.ratingui.RatingBarVectorFix
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="MissingConstraints"
                android:numStars="5"
                android:isIndicator="true"
                style="@style/RatingBar">
            </com.example.ratingui.RatingBarVectorFix>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>